Bug 97586 - xorg-server @ deae9c7: error: implicit declaration of function ‘ms_flush_drm_events’ [-Werror=implicit-function-declaration]
Summary: xorg-server @ deae9c7: error: implicit declaration of function ‘ms_flush_drm_...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/modesetting (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-03 09:42 UTC by Coacher
Modified: 2016-09-29 18:05 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
build.log (2.77 MB, text/plain)
2016-09-03 09:42 UTC, Coacher
no flags Details

Description Coacher 2016-09-03 09:42:18 UTC
Created attachment 126186 [details]
build.log

Hello.

```
/var/tmp/portage/x11-base/xorg-server-9999/work/xorg-server-9999/hw/xfree86/drivers/modesetting/present.c: In function ‘ms_present_queue_vblank’:
/var/tmp/portage/x11-base/xorg-server-9999/work/xorg-server-9999/hw/xfree86/drivers/modesetting/present.c:144:9: error: implicit declaration of function ‘ms_flush_drm_events’ [-Werror=implicit-function-declaration]
         if (errno != EBUSY || ms_flush_drm_events(screen) < 0) {
         ^
```

Please fix.
Comment 1 Michel Dänzer 2016-09-05 09:16:05 UTC
Does re-running autogen.sh fix it?
Comment 2 Michel Dänzer 2016-09-05 09:19:38 UTC
Never mind. You should be able to avoid this by building without --disable-glamor.

Qiang, can you take a look at fixing this?
Comment 3 Qiang Yu 2016-09-05 09:24:10 UTC
(In reply to Michel Dänzer from comment #2)
> Never mind. You should be able to avoid this by building without
> --disable-glamor.
> 
> Qiang, can you take a look at fixing this?

OK, let me have a look.
Comment 4 Coacher 2016-09-29 18:05:33 UTC
I can confirm this is fixed in
commit 7f6fa4e449f5a7215bbf60ce8c874e163a7453a9
Author: Qiang Yu <Qiang.Yu@amd.com>
Date:   Mon Sep 5 18:05:42 2016 +0800

modesetting: fix compile error when --disable-glamor

Move ms_flush_drm_events out of GLAMOR ifdef.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97586
Signed-off-by: Qiang Yu <Qiang.Yu@amd.com>
Reviewed-by: Michel Dänzer <michel.daenzer@amd.com>
Signed-off-by: Keith Packard <keithp@keithp.com>

Thank you.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.